less/stb-boxes.less
.stb-box {
  padding: 12px 24px 24px 24px;
  margin-bottom: 20px;
  border: 1px solid transparent;  
  
  &.first {
    .stbcolor-primary .third;
    > p {
      color: @stb-primary-black;
    }
  }
  
  &.second {
    .stbcolor-secondary.sixth;
    a {
      font-weight: strong;
    }
  }
  
  &.third {
    .stbcolor-gray .first;
    border: 1px solid @stb-gray-third;
  }
  
  &.fourth {
    .stbcolor-background .first;
  }  

  &.fifth {
    .stbcolor-background .second;
  }    

  &.sixth {
    .stbcolor-background .third;
  }
  
  &.dark {
    color: @stb-primary-white;
    & h1, h2, h3, h4, h5, h6, p {
      color: @stb-primary-white;
    }
  }  

  // Forcing solid border
  &.gray{
    background-color: @stb-gray-first;
  }  
  &.border {
    border: 1px solid;
    border-color: @stb-secondary-charcoal;
    
    &.red {
    	border-color: @stb-primary-color;
    }
    
	  &.gray {
	    border-color: @stb-gray-second;
    }
  }
	
  // Adding possibility of thicker border
  &.fat {
		border: 2px solid;
	}

  // Forcing dotted border
  &.dottedborder {
    border: 1px dotted;
  }

  ul.stb,ol.stb {
    padding-bottom: 0;
  }
  
  &.mini{
    background-color: @stb-gray-first;
    @media screen and (max-width: 768px) {
      padding: 12px;
    }
    outline: 1px solid @stb-gray-fifth;
   
  }

  &.mini:hover {
    padding: 24px;
    @media screen and (max-width: 768px) {
      padding: 12px;
    }
    outline: 5px solid @stb-secondary-forest;
  }

  &.big{
    background-color: @stb-primary-white;
    padding: 24px;
    @media screen and (max-width: 768px) {
      padding: 12px;
    }
    outline: 1px solid @stb-primary-color;
  }

  &.big:hover {
    padding: 24px;
    @media screen and (max-width: 768px) {
      padding: 12px;
    }
    outline: 5px solid @stb-secondary-forest;
  }

  &.showClickable {
    cursor: pointer;
  }

}

.chatWhat {
  display: none;
}

.chatWhat a {
  cursor:pointer; 
  padding-right:10px;
}

.closedChat {
  text-decoration: line-through;
}

.callBackForm {
  display: none;
}

.callBackReceipt {
  display: none;
}

a.ChatClosed:hover {
  cursor:default; ;
}

